--- a/src/app/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile.component.html
@@ -2,21 +2,37 @@
   <div class="form-wrapper text-white">
     <h2 class="title text-center">{{ "editProfile" | translate }}</h2>
 
-    <form class="form mt-4" (ngSubmit)="onSubmit($event)">
+    <form
+      #editProfileForm="ngForm"
+      class="form mt-4"
+      (ngSubmit)="onSubmit(editProfileForm)"
+    >
       <div class="name mb-3">
         <label for="name" class="form-label">{{ "name" | translate }}:</label>
 
         <input
           type="text"
           class="form-control"
-          [ngClass]="nameError ? 'is-invalid' : ''"
+          [ngClass]="
+            name.invalid && (name.dirty || name.touched)
+              ? 'is-invalid'
+              : ''
+              ? 'is-invalid'
+              : ''
+          "
           id="name"
           name="name"
+          required
+          minlength="1"
           [placeholder]="'enterName' | translate"
           [(ngModel)]="form.name"
+          #name="ngModel"
         />
 
-        <div *ngIf="nameError" class="text-danger input-error">
+        <div
+          *ngIf="name.invalid && (name.dirty || name.touched)"
+          class="text-danger input-error"
+        >
           {{ "pleaseEnterValidName" | translate }}
         </div>
       </div>
@@ -29,14 +45,22 @@
         <input
           type="text"
           class="form-control"
-          [ngClass]="loginError ? 'is-invalid' : ''"
+          [ngClass]="
+            login.invalid && (login.dirty || login.touched) ? 'is-invalid' : ''
+          "
           id="login"
           name="login"
+          required
+          minlength="1"
           [placeholder]="'enterLogin' | translate"
           [(ngModel)]="form.login"
+          #login="ngModel"
         />
 
-        <div *ngIf="loginError" class="text-danger input-error">
+        <div
+          *ngIf="login.invalid && (login.dirty || login.touched)"
+          class="text-danger input-error"
+        >
           {{ "pleaseEnterValidLogin" | translate }}
         </div>
       </div>
@@ -49,14 +73,24 @@
         <input
           type="password"
           class="form-control"
-          [ngClass]="passwordError ? 'is-invalid' : ''"
+          [ngClass]="
+            password.invalid && (password.dirty || password.touched)
+              ? 'is-invalid'
+              : ''
+          "
           id="password"
           name="password"
+          required
+          minlength="1"
           [placeholder]="'enterPassword' | translate"
           [(ngModel)]="form.password"
+          #password="ngModel"
         />
 
-        <div *ngIf="passwordError" class="text-danger input-error">
+        <div
+          *ngIf="password.invalid && (password.dirty || password.touched)"
+          class="text-danger input-error"
+        >
           {{ "pleaseEnterValidPassword" | translate }}
         </div>
       </div>
@@ -69,14 +103,27 @@
         <input
           type="password"
           class="form-control"
-          [ngClass]="repeatPasswordError ? 'is-invalid' : ''"
+          [ngClass]="
+            confirmPassword.invalid &&
+            (confirmPassword.dirty || confirmPassword.touched)
+              ? 'is-invalid'
+              : ''
+          "
           id="repeat-password"
-          name="password"
+          name="repeat-password"
+          [appCheckPasswords]="form.password"
           [placeholder]="'confirmPassword' | translate"
           [(ngModel)]="repeatPassword"
+          #confirmPassword="ngModel"
         />
 
-        <div *ngIf="repeatPasswordError" class="text-danger input-error">
+        <div
+          *ngIf="
+            confirmPassword.invalid &&
+            (confirmPassword.dirty || confirmPassword.touched)
+          "
+          class="text-danger input-error"
+        >
           {{ "passwordsMismatch" | translate }}
         </div>
       </div>
