--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -62,43 +62,79 @@
   </div>
 
   <div class="modal-body">
-    <div>
-      <label for="title" class="form-label"
-        >{{ "boardTitle" | translate }}:</label
-      >
+    <form #createBoardForm="ngForm">
+      <div>
+        <label for="title" class="form-label"
+          >{{ "boardTitle" | translate }}:</label
+        >
 
-      <input
-        type="text"
-        class="form-control"
-        [ngClass]="titleError ? 'is-invalid' : ''"
-        id="title"
-        [placeholder]="'enterBoardTitle' | translate"
-        [(ngModel)]="title"
-      />
+        <input
+          type="text"
+          class="form-control"
+          [ngClass]="
+            boardTitle.invalid && (boardTitle.dirty || boardTitle.touched)
+              ? 'is-invalid'
+              : ''
+          "
+          id="title"
+          name="title"
+          required
+          minlength="1"
+          [placeholder]="'enterBoardTitle' | translate"
+          [(ngModel)]="title"
+          #boardTitle="ngModel"
+        />
 
-      <div *ngIf="titleError" class="text-danger input-error">
-        {{ "pleaseEnterValidBoardTitle" | translate }}
+        <div
+          *ngIf="
+            boardTitle.invalid && (boardTitle.dirty || boardTitle.touched)
+              ? 'is-invalid'
+              : ''
+          "
+          class="text-danger input-error"
+        >
+          {{ "pleaseEnterValidBoardTitle" | translate }}
+        </div>
       </div>
-    </div>
 
-    <div class="mt-3">
-      <label for="description" class="form-label"
-        >{{ "boardDescription" | translate }}:</label
-      >
+      <div class="mt-3">
+        <label for="description" class="form-label"
+          >{{ "boardDescription" | translate }}:</label
+        >
 
-      <input
-        type="text"
-        class="form-control"
-        [ngClass]="descriptionError ? 'is-invalid' : ''"
-        id="description"
-        [placeholder]="'enterBoardDescription' | translate"
-        [(ngModel)]="description"
-      />
+        <input
+          type="text"
+          class="form-control"
+          [ngClass]="
+            boardDesc.invalid && (boardDesc.dirty || boardDesc.touched)
+              ? 'is-invalid'
+              : ''
+              ? 'is-invalid'
+              : ''
+          "
+          id="description"
+          name="description"
+          required
+          minlength="1"
+          [placeholder]="'enterBoardDescription' | translate"
+          [(ngModel)]="description"
+          #boardDesc="ngModel"
+        />
 
-      <div *ngIf="descriptionError" class="text-danger input-error">
-        {{ "pleaseEnterValidBoardDescription" | translate }}
+        <div
+          *ngIf="
+            boardDesc.invalid && (boardDesc.dirty || boardDesc.touched)
+              ? 'is-invalid'
+              : ''
+              ? 'is-invalid'
+              : ''
+          "
+          class="text-danger input-error"
+        >
+          {{ "pleaseEnterValidBoardDescription" | translate }}
+        </div>
       </div>
-    </div>
+    </form>
   </div>
 
   <div class="modal-footer">
@@ -113,7 +149,7 @@
     <button
       type="button"
       class="btn btn-outline-primary"
-      (click)="createBoard()"
+      (click)="createBoard(createBoardForm)"
     >
       {{ "ok" | translate }}
     </button>
