--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,7 +2,11 @@
   <div class="form-wrapper text-white">
     <h2 class="title text-center">{{ "login" | translate }}</h2>
 
-    <form class="form mt-4" (ngSubmit)="onSubmit($event)">
+    <form
+      #loginForm="ngForm"
+      class="form mt-4"
+      (ngSubmit)="onSubmit(loginForm)"
+    >
       <div class="login">
         <label for="login" class="form-label"
           >{{ "loginName" | translate }}:</label
@@ -11,14 +15,22 @@
         <input
           type="text"
           class="form-control"
-          [ngClass]="loginError ? 'is-invalid' : ''"
+          [ngClass]="
+            login.invalid && (login.dirty || login.touched) ? 'is-invalid' : ''
+          "
           id="login"
           name="login"
+          required
+          minlength="1"
           [placeholder]="'enterLogin' | translate"
           [(ngModel)]="form.login"
+          #login="ngModel"
         />
 
-        <div *ngIf="loginError" class="text-danger input-error">
+        <div
+          *ngIf="login.invalid && (login.dirty || login.touched)"
+          class="text-danger input-error"
+        >
           {{ "pleaseEnterValidLogin" | translate }}
         </div>
       </div>
@@ -31,14 +43,24 @@
         <input
           type="password"
           class="form-control"
-          [ngClass]="passwordError ? 'is-invalid' : ''"
+          [ngClass]="
+            password.invalid && (password.dirty || password.touched)
+              ? 'is-invalid'
+              : ''
+          "
           id="password"
           name="password"
+          required
+          minlength="1"
           [placeholder]="'enterPassword' | translate"
           [(ngModel)]="form.password"
+          #password="ngModel"
         />
 
-        <div *ngIf="passwordError" class="text-danger input-error">
+        <div
+          *ngIf="password.invalid && (password.dirty || password.touched)"
+          class="text-danger input-error"
+        >
           {{ "pleaseEnterValidPassword" | translate }}
         </div>
       </div>
