refactor: create trim directive

--- a/src/app/components/task-modal/task-modal.component.html
+++ b/src/app/components/task-modal/task-modal.component.html
@@ -19,6 +19,7 @@
         "
         id="taskTitle"
         name="taskTitle"
+        appTrim
         required
         minlength="1"
         [placeholder]="'enterTaskTitle' | translate"
@@ -49,6 +50,7 @@
         "
         id="taskDescription"
         name="taskDescription"
+        appTrim
         required
         minlength="1"
         [placeholder]="'enterTaskDescription' | translate"
