--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -78,6 +78,7 @@
           "
           id="title"
           name="title"
+          appTrim
           required
           minlength="1"
           [placeholder]="'enterBoardTitle' | translate"
@@ -114,6 +115,7 @@
           "
           id="description"
           name="description"
+          appTrim
           required
           minlength="1"
           [placeholder]="'enterBoardDescription' | translate"
