--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -20,6 +20,7 @@
           "
           id="login"
           name="login"
+          appTrim
           required
           minlength="1"
           [placeholder]="'enterLogin' | translate"
@@ -50,6 +51,7 @@
           "
           id="password"
           name="password"
+          appTrim
           required
           minlength="1"
           [placeholder]="'enterPassword' | translate"
