--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -18,6 +18,7 @@
           "
           id="name"
           name="name"
+          appTrim
           required
           minlength="1"
           [placeholder]="'enterName' | translate"
@@ -46,6 +47,7 @@
           "
           id="login"
           name="login"
+          appTrim
           required
           minlength="1"
           [placeholder]="'enterLogin' | translate"
@@ -76,6 +78,7 @@
           "
           id="password"
           name="password"
+          appTrim
           required
           minlength="1"
           [placeholder]="'enterPassword' | translate"
