--- a/src/app/pages/board/board.component.html
+++ b/src/app/pages/board/board.component.html
@@ -62,6 +62,7 @@
           "
           id="title"
           name="title"
+          appTrim
           required
           minlength="1"
           [placeholder]="'enterColumnTitle' | translate"
