--- a/src/app/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile.component.html
@@ -22,6 +22,7 @@
           "
           id="name"
           name="name"
+          appTrim
           required
           minlength="1"
           [placeholder]="'enterName' | translate"
@@ -50,6 +51,7 @@
           "
           id="login"
           name="login"
+          appTrim
           required
           minlength="1"
           [placeholder]="'enterLogin' | translate"
@@ -80,6 +82,7 @@
           "
           id="password"
           name="password"
+          appTrim
           required
           minlength="1"
           [placeholder]="'enterPassword' | translate"
@@ -111,6 +114,7 @@
           "
           id="repeat-password"
           name="repeat-password"
+          appTrim
           [appCheckPasswords]="form.password"
           [placeholder]="'confirmPassword' | translate"
           [(ngModel)]="repeatPassword"
