feat: change footer course logo

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,7 +13,7 @@
 
     <a href="https://rs.school/angular/" class="d-inline-block">
       <img
-        src="../../../assets/course-logo.svg"
+        src="../../../assets/course-logo.png"
         alt="course logo"
         class="course-logo"
       />
