--- a/src/app/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile.component.html
@@ -115,6 +115,7 @@
           id="repeat-password"
           name="repeat-password"
           appTrim
+          required
           [appCheckPasswords]="form.password"
           [placeholder]="'confirmPassword' | translate"
           [(ngModel)]="repeatPassword"
