refactor: refactor code

--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -26,7 +26,7 @@
           <div class="card board-card">
             <div
               class="card-close text-danger"
-              (click)="openDialog($event, board.id)"
+              (click)="openConfirmDialog($event, board.id)"
             >
               <fa-icon [icon]="faXmark"></fa-icon>
             </div>
