--- a/src/app/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile.component.html
@@ -137,7 +137,7 @@
         <button
           type="button"
           class="btn btn-danger me-4"
-          (click)="openDialog()"
+          (click)="openConfirmDialog()"
         >
           {{ "delete" | translate }}
         </button>
