feat: add desktop app capabilities

--- a/src/app/welcome/welcome/welcome.component.html
+++ b/src/app/welcome/welcome/welcome.component.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="col-md-6 col-12 about-image mt-md-0 mt-4">
-          <img src="../../assets/team-board.webp" alt="team kanban board" />
+          <img src="assets/team-board.webp" alt="team kanban board" />
         </div>
       </div>
     </div>
@@ -37,7 +37,7 @@
 
       <div class="row d-flex align-items-center px-5 mt-5">
         <div class="col-md-6 col-12 info-image">
-          <img src="../../assets/office-worker.jpg" alt="office worker" />
+          <img src="assets/office-worker.jpg" alt="office worker" />
         </div>
 
         <div class="col-md-6 col-12 info-text pl-1 py-1 mt-md-0 mt-3">
@@ -181,11 +181,7 @@
           </div>
 
           <div class="col-md-6 col-12 author-info__image mt-md-0 mt-3">
-            <img
-              src="../../assets/guy-coding.gif"
-              alt="guy coding"
-              class="w-100"
-            />
+            <img src="assets/guy-coding.gif" alt="guy coding" class="w-100" />
           </div>
         </div>
       </div>
